# loom-agent-chat

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  codeql.yml
skills/loom-chat/: SKILL.md  loom_chat.py
